# config-audit

./: .gitignore  README.md  pyproject.toml  requirements.txt
config_auditor/: __init__.py
config_auditor/auditors/: __init__.py  aws.py  base.py  linux.py
config_auditor/checks/: __init__.py  file_permissions.py  iam.py  network.py  s3.py  ssh.py
config_auditor/reporters/: __init__.py  report_generator.py
config_auditor/utils/: __init__.py  severity.py
examples/: sample_report.json  sample_report.md
tests/: __init__.py  test_aws_auditor.py  test_linux_auditor.py  test_reporters.py
